sauvegarde de l'index des notes à la sauvegarde des notes